2001-06-20 12:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc\license.txt
  * doc\en\license.txt
  * source\rtl\gtapi.c
  * source\rtl\setpos.c
    * Updated from the old Harbour Exception to the new Harbour Exception
      with permission from Bil Simser <bsimser@home.com>.

  * source\rtl\gtwin\gtwin.c
    + Added comment about Beep() parameters ignored on non-NT platforms.

2001-06-20 09:55 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/debug/debugger.prg
     * added code to support PgDn, PgUp in a code window and a vars window

2001-06-19 23:39 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/lang/msgro.c
   * source/lang/msg_tpl.c
   * doc/license.txt
   * doc/en/license.txt
     * Changed two old licences of mine to the new one.
       Actually msg_tpl is not "mine", it's only a template.

2001-06-19 16:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc/license.txt
  * doc/en/license.txt
    * This rewrite includes the compiler license, the new exception license,
      and the old exception license (and a list of all files to which the old
      one applies).

2001-06-19 17:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   ! contrib/rdd_ads/ads1.c
   ! contrib/rdd_ads/adsfunc.c
   ! contrib/rdd_ads/adsmgmnt.c
     + Added many missing type casting required for C++ compilers.

   ! contrib/rdd_ads/makefile.vc
     + Added missing -DWIN32 to CFLAGS

   /* RDDADS.lib can now be built with MSVC using the supplied contrib/rdd_ads/make_vc.bat */

2001-06-19 14:50 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source\rtl\browdbx.prg
  * source\rtl\setcolor.c
  * source\rtl\browdb.prg
  * source\rtl\xsavescr.c
  * source\rtl\gtwin\gtwin.c
  * contrib\hbclip\hbclip.ch
    * Updated from the old Harbour Exception to the new Harbour Exception
      with permission from Paul Tucker <ptucker@sympatico.ca>

2001-06-19 14:25 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  *contrib\runjava\hbrunj.h
  *contrib\runjava\runjava.c