@@ -663,7 +663,7 @@ void hb_setInitialize( void )
    hb_set.HB_SET_CONSOLE = TRUE;
    hb_set.HB_SET_DATEFORMAT = ( char * ) hb_xgrab( 9 );
    memcpy( hb_set.HB_SET_DATEFORMAT, "mm/dd/yy", 9 );
-   hb_set.HB_SET_DEBUG = FALSE;
+   hb_set.HB_SET_DEBUG = TRUE;
    hb_set.HB_SET_DECIMALS = 2;
    hb_set.HB_SET_DEFAULT = ( char * ) hb_xgrab( 1 );
    hb_set.HB_SET_DEFAULT[ 0 ] = '\0';
